[package]
name = "dobby"
version = "0.1.0"
authors = ["Khrunov Evgeniy <hrrrxppp@gmail.com>"]
edition = "2018"

[dependencies]
num_cpus = "1.0"
nix = "0.16.1"
posixmq = "0.2.0"
libloading = "0.5"
shared_memory = "0.11.3"
rustc-serialize = "0.3.24"
raw_sync = "0.1.2"
libc = "0.2.79"
dobby_core = { path = "core" }