[package]
name = "core"
version = "0.1.0"
authors = ["Khrunov Evgeniy <hrrrxppp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/main.rs"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
