[package]
name = "dobby_core"
version = "0.1.0"
authors = ["Khrunov Evgeniy <hrrrxppp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
rustc-serialize = "0.3.24"
raw_sync = "0.1.2"
shared_memory = { path = "./shared_memory" }
libc = "0.2"

