[package]
name = "dobby_gpio"
version = "0.1.0"
authors = ["Khrunov Evgeniy <hrrrxppp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gpio"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
rustc-serialize = "0.3.24"
dobby_core = { path = "../core" }


